# mirgovorit-cookbook

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  sample_data.json
cookbook/: .env-sample
cookbook/core/: asgi.py  models.py  settings.py  urls.py  wsgi.py
cookbook/core/templates/: _base.html
cookbook/recipes/: admin.py  apps.py  constants.py  models.py  serializers.py  service.py  urls.py  views.py
cookbook/recipes/migrations/: 0001_initial.py
cookbook/recipes/templates/: show_recipes_without_product.html
